Backend-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: exam
  labels:
    app: examb
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1         
      maxUnavailable: 0
  selector:
    matchLabels:
      app: examb
  template:
    metadata:
      labels:
        app: examb
    spec:
      containers:
      - name: back-cont
        image: swayamnakshane/eb2425:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
