Backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
  namespace: dash2
  labels:
    app: back
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
        - name: backend-pod
          image: swayamnakshane/dashback:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
