MYSQL-Deploymet.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-deployment
  namespace: exam
spec:
  serviceName: mysql-db
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: exama
  template:
    metadata:
      labels:
        app: exama
    spec:
      containers:
      - name: mysql-cont
        image: mysql:8.0.42
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-persistent-storage
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: standard
      resources:
        requests:
          storage: 15Gi
