MongoDb.yml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mongodb-deployment
  namespace: dash
  labels:
    app: mongodb
spec:
  serviceName: mongosvc
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb-pod
        image: mongo:latest
        ports:
          - containerPort: 27017
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db

  volumeClaimTemplates:
  - metadata:
      name: mongodb-data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: standard
      resources:
        requests:
          storage: 15Gi
