Front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: dash
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 31000
