Frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
  namespace: exam
  labels:
    app: examc
spec:
  type: ClusterIP
  selector:
    app: examc
  ports:
    - protocol: TCP
      targetPort: 3000
      port: 3000
      # nodePort: 31000
