MongoDB-Service.yml
kind: Service
apiVersion: v1
metadata:
  name: mongosvc
  namespace: dash
  labels:
    app: mongodb
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      targetPort: 27017
      port: 27017
