admin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: dash2
  labels:
    app: frontadmin
spec:
  type: NodePort
  selector:
    app: frontadmin
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 32000
