Back-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: dash2 
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  ingressClassName: nginx
  rules:
    - host: "asses.arcapreit.com"
      http:
        paths:
          - path: /back(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: back-svc    
                port:
                  number: 5000
