back-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: exam
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  ingressClassName: nginx
  rules:
    - host: "examportal.aswa.site"
      http:
        paths:
          - path: /back(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-svc
                port:
                  number: 5000
