front-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: exam
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "asses.shamgar.online"
      secretName: examportal-tls
  rules:
    - host: "asses.shamgar.online"
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: front-svc
                port:
                  number: 3000
